2007-02-07  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-about-me-password.c: (passdlg_set_auth_state),
	(passdlg_validate_passwords):
	* gnome-about-me.c: (about_me_load_string_field),
	(about_me_setup_dialog): fix build in general, with gcc 2 in particular,
	and also get rid of a few warnings

2007-01-22  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #376079

	Patch by Francisco Javier F. Serrador  <serrador@openshine.com>

	* gnome-about-me-password.c (passdlg_spawn_passwd): make translatable
	strings more generic.

2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #356076

	Patch by Brian Cameron <brian.cameron@sun.com>

	* gnome-about-me.c (about_me_update_photo): fixed compilation on Solaris.

2007-01-06  Hiroyuki Ikezoe <poincare@ikezoe.net>

	Fixes #343584 (patch from Evolution)

	* e-image-chooser.c (set_image_from_data): ref the pixbuf we get to
	not lose it when we close the loader.

	* gnome-about-me.c (about_me_update_photo): ditto.
	
2006-09-15  Matt Keenan <matt.keenan@sun.com>

	Fixes #349079

	* gnome-about-me-password.c (spawn_passwd): don't use stdin, stdout
	and stderr as variable names. Fixes compilation issue on Sun Studio
	compiler.

2006-08-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.c: (about_me_load_photo), (about_me_update_photo):
	  - fix build with the new libebook API (Closes: #348821)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.desktop.in.in: don't list the Application category, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-06-11  Rodrigo Moya <rodrigo@novell.com>

	Fixes #344468

	* gnome-about-me-password.c: removed redundant headers.

2006-05-26  Sebastien Bacher  <seb128@debian.org>

	* gnome-about-me.glade: fix label alignment (Closes: #343056)

2006-05-26  Rodrigo Moya <rodrigo@novell.com>

	Fixes #324971

	* gnome-about-me-password.c (passdlg_spawn_passwd): fixed typo.

2006-01-21  Diego Gonzalez   <diego@pemas.net>
