@@ -1,5 +1,11 @@
 2007-02-07  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-about-me.c: (about_me_destroy),
+	(about_me_button_clicked_cb), (about_me_setup_dialog), (main): fix
+	various memory leaks
+
+2007-02-07  Jens Granseuer  <jensgr@gmx.net>
+
 	* Makefile.am:
 	* gnome-about-me-password.c: (passdlg_set_auth_state),
 	(passdlg_validate_passwords):
